--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extended date/time ranges for moment.js",
   "main": "lib/index.js",
   "scripts": {
-    "test": "coffee src/test/test-*"
+    "test": "tape test/test-*"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "moment-range": "^2.1.0"
   },
   "devDependencies": {
-    "tape": "^4.4.0"
+    "tape": "^4.4.0",
+    "coffee-script": "latest"
   }
 }
